starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__redeclaration_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn test() {\n    let value = 1;\n    let value = 2;\n}\n"
---
E0002 (https://starstream.nightstream.dev/errors/E0002)

  x variable `value` is already defined in this scope
   ,-[test.star:3:9]
 1 | fn test() {
 2 |     let value = 1;
   :         ^^|^^
   :           `-- previously defined here
 3 |     let value = 2;
   :         ^^^^^
 4 | }
   `----
