starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__reports_immutable_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn test() {\n    let flag = true;\n    flag = false;\n}\n"
---
]8;;https://starstream.nightstream.dev/errors/E0004\E0004 (link)]8;;\

  x cannot assign to immutable variable `flag`
   ,-[test.star:3:5]
 1 | fn test() {
 2 |     let flag = true;
   :         ^^|^
   :           `-- declared without `mut` here
 3 |     flag = false;
   :     ^^|^
   :       `-- assigned here
 4 | }
   `----
  help: consider changing `let` to `let mut`
