starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__reports_let_annotation_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn test() {\n    let wrong: bool = 1;\n}\n"
---
starstream::type::assignment_mismatch

  x cannot assign value of type `i64` to variable `wrong` of type `bool`
   ,-[test.star:2:9]
 1 | fn test() {
 2 |     let wrong: bool = 1;
   :         ^^|^^         |
   :           |           `-- has type `i64`
   :           `-- has type `bool`
 3 | }
   `----
