starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__required_storage_disclose_does_not_warn.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nutxo Counter {\n    storage {\n        let mut counter: i64;\n    }\n\n    main fn update(nextCounter: i64) {\n        counter = (disclose(nextCounter));\n    }\n}\n"
---
T-Utxo: Counter => 
  T-Fn: update => ()
    T-Assign: {counter: i64, nextCounter: i64, update: fn(nextCounter: i64) -> ()} ⊢ counter = (disclose(nextCounter)); ⇒ i64
      T-Group: {counter: i64, nextCounter: i64, update: fn(nextCounter: i64) -> ()} ⊢ (disclose(nextCounter)) ⇒ i64
        T-Disclose: {counter: i64, nextCounter: i64, update: fn(nextCounter: i64) -> ()} ⊢ disclose(nextCounter) ⇒ i64
          T-Var: {counter: i64, nextCounter: i64, update: fn(nextCounter: i64) -> ()} ⊢ nextCounter ⇒ i64
      Unify-Const: i64 ~ i64 => {}
