starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__result_err_constructor.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn test() {\n    let x = Result::Err(false);\n}\n"
---
T-Fn: test => ()
  T-Let: {test: fn() -> ()} ⊢ let x = Result::Err(false); ⇒ Result
    T-Call: {test: fn() -> ()} ⊢ Result::Err(false) ⇒ Result
      T-Var: {test: fn() -> ()} ⊢ Result::Err ⇒ fn(p0: t4) -> Result
      T-Bool: {test: fn() -> ()} ⊢ false ⇒ bool
      Unify-Var: bool ~ t4 => {bool/t4}
