starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__result_explicit_annotation.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn test() {\n    let x: Result<i64, bool> = Result::Ok(42);\n}\n"
---
T-Fn: test => ()
  T-Let: {test: fn() -> ()} ⊢ let x: Result<i64, bool> = Result::Ok(42); ⇒ Result<i64, bool>
    T-Call: {test: fn() -> ()} ⊢ Result::Ok(42) ⇒ Result
      T-Var: {test: fn() -> ()} ⊢ Result::Ok ⇒ fn(t3) -> Result
      T-Int: {test: fn() -> ()} ⊢ 42 ⇒ i64
      Unify-Var: i64 ~ t3 => {i64/t5}
    Unify-Enum: Result<i64, bool> ~ Result => {bool/t4, i64/t3}
      Unify-Var: i64 ~ i64 => {i64/t3}
      Unify-Var: bool ~ t4 => {bool/t4}
