starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__result_ok_constructor.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn test() {\n    let x = Result::Ok(42);\n}\n"
---
T-Fn: test => ()
  T-Let: {test: fn() -> ()} ⊢ let x = Result::Ok(42); ⇒ Result
    T-Call: {test: fn() -> ()} ⊢ Result::Ok(42) ⇒ Result
      T-Var: {test: fn() -> ()} ⊢ Result::Ok ⇒ fn(p0: t3) -> Result
      T-Int: {test: fn() -> ()} ⊢ 42 ⇒ i64
      Unify-Var: i64 ~ t3 => {i64/t5}
