starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__return_mismatch_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn compute() -> i64 {\n    return true;\n}\n"
---
E0009 (https://starstream.nightstream.dev/errors/E0009)

  x return type `bool` does not match function signature `i64`
   ,-[test.star:2:12]
 1 | fn compute() -> i64 {
   :                 ^|^
   :                  `-- has type `i64`
 2 |     return true;
   :            ^^|^
   :              `-- has type `bool`
 3 | }
   `----
